src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__containers__tests__draw_blocks_containers_none.snap
---
source: src/core/status/ui/draw_blocks/containers.rs
expression: setup.terminal.backend()
---
"╭ Containers ──────────────────────────╮"
"│         no containers running        │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
